--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </script>
 </head>
 <body>
-  <form action="/share-input" method="post">
+  <form action="/" method="post">
     <label for="numberInput">Enter a Number:</label>
     <input type="text" id="numberInput" name="numberInput" pattern="[0-9]*" required>
     <button type="button" onclick="clientlogic()">Submit</button>
