--- a/public/index.html
+++ b/public/index.html
@@ -107,25 +107,25 @@
 
   <div id="remaining_questions_alcohol" style="display: none;">
   <p>What age did you first drink alcohol (more than just a sip)?</p>
-  <input type="number" name="first_alcohol_age" id="first_alcohol_age" value="10"placeholder="Input the age here:" required>
+  <input type="number" name="first_alcohol_age" id="first_alcohol_age" value="10" placeholder="Input the age here:" required>
   <br>
 
   <p>How many days have you drank alcohol over the last month?</p>
-  <input type="number" name="alcohol_use_frequency" id="alcohol_use_frequency" value="10"placeholder="Input a number here:" required>
+  <input type="number" name="alcohol_use_frequency" id="alcohol_use_frequency" value="10" placeholder="Input a number here:" required>
   <br>
 
   <p>How many days have you had ≥ 5 (male) or ≥ 4 (female) alcoholic drinks in two hour period over the last month?</p>
-  <input type="number" name="binge_frequency" id="binge_frequency"placeholder="Input a number here:">
+  <input type="number" name="binge_frequency" id="binge_frequency" placeholder="Input a number here:">
   <br>
   </div>
 
   <div id="remaining_questions_marijuana" style="display: none;">
   <p>What age did you first use marijuana?</p>
-  <input type="number" name="first_alcohol_age" id="age" value="10"placeholder="Input the age here:" required>
+  <input type="number" name="first_alcohol_age" id="age" value="10" placeholder="Input the age here:" required>
   <br>
 
   <p>How many days have you used marijuana over the last month?</p>
-  <input type="number" name="marijuana_use_frequency" id="marijuana_use_frequency" value="10"placeholder="Input a number here:" required>
+  <input type="number" name="marijuana_use_frequency" id="marijuana_use_frequency" value="10" placeholder="Input a number here:" required>
   <br>
 
   </div>
@@ -137,7 +137,7 @@
     <li>Curiosity</li>
       <li>
         <select id="rank_feature1" name="rank_feature1">
-          <option value="">--</option> 
+          <option value="0">--</option> 
           <option value="1">1 (Most Important)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -148,7 +148,7 @@
       <li>Joy Seeking</li>
       <li>
         <select id="rank_feature2" name="rank_feature2">
-          <option value="">--</option>
+          <option value="0">--</option>
           <option value="1">1 (Most Important)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -160,7 +160,7 @@
       <li>To help sleep</li>
       <li>
         <select id="rank_feature3" name="rank_feature3">
-          <option value="">--</option>
+          <option value="0">--</option>
           <option value="1">1 (Most Important)</option>
           <option value="2">2</option>
           <option value="3">3</option>
@@ -171,8 +171,8 @@
         </li>
         <li>Psychological Disorder</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-              <option value="">--</option>
+            <select id="rank_feature4" name="rank_feature4">
+              <option value="0">--</option>
               <option value="1">1 (Most Important)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -183,8 +183,8 @@
         </li>
         <li>Low self-confidence</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-              <option value="">--</option>
+            <select id="rank_feature5" name="rank_feature5">
+              <option value="0">--</option>
               <option value="1">1 (Most Important)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -195,8 +195,8 @@
           </li>
         <li>Lack of Amusement facilities</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-            <option value="">--</option>
+            <select id="rank_feature6" name="rank_feature6">
+            <option value="0">--</option>
             <option value="1">1 (Most Important)</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -207,8 +207,8 @@
         </li>
         <li>Friends were doing it</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-                <option value="">--</option>
+            <select id="rank_feature7" name="rank_feature7">
+                <option value="0">--</option>
                 <option value="1">1 (Most Important)</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -219,8 +219,8 @@
             </li>
         <li>Proximity to an addicted person</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-            <option value="">--</option>
+            <select id="rank_feature8" name="rank_feature8">
+            <option value="0">--</option>
             <option value="1">1 (Most Important)</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -231,8 +231,8 @@
         </li>
         <li>Low cost of drugs</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-                <option value="">--</option>
+            <select id="rank_feature9" name="rank_feature9">
+                <option value="0">--</option>
                 <option value="1">1 (Most Important)</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -243,8 +243,8 @@
         </li>
         <li>Boredom/free time</li>
         <li>
-            <select id="rank_feature3" name="rank_feature3">
-              <option value="">--</option>
+            <select id="rank_feature10" name="rank_feature10">
+              <option value="0">--</option>
               <option value="1">1 (Most Important)</option>
               <option value="2">2</option>
               <option value="3">3</option>
@@ -270,6 +270,7 @@
   </script>
   
   <script>
+    // This script shows and hides relevant questions to the user
     const firstTimeInputAlcohol = document.getElementsByName('truefalse_alcohol');
     const remainingQuestionsAlcohol = document.getElementById('remaining_questions_alcohol');
     const remainingQuestionsEither = document.getElementById('remaining_questions_either');
@@ -285,7 +286,8 @@
         } else {
           remainingQuestionsAlcohol.style.display = 'none';
           // If alcohol is changed to 'no', check if marijuana is 'no' as well, then hide
-          if (firstTimeInputMarijuana.value === 'no_mar') {
+          if (firstTimeInputMarijuana.target.value === 'no_mar') {
+            // TODO: this isn't working
             remainingQuestionsEither.style.display = 'none';
           }
         }
@@ -300,7 +302,8 @@
         } else {
           remainingQuestionsMarijuana.style.display = 'none';
           // If marijuana is changed to 'no', check if alcohol is 'no' as well, then hide
-          if (firstTimeInputAlcohol.value === 'no_alc') {
+          if (firstTimeInputAlcohol.target.value === 'no_alc') {
+            // TODO: this isn't working
             remainingQuestionsEither.style.display = 'none';
           }
         }
@@ -333,20 +336,81 @@
       // When the submit button is pressed, run the code in this anonymous function
       var inputArray = [];
       
-      // Get age
+      // Get age (index = 0)
       inputArray.push(document.getElementById("age").value);
 
-      // Get gender: 0 = woman, 1 = man, 2 = non-binary, 3 = prefer not to say
-      var gender = 3
+      // Get gender (index = 1): 0 = woman, 1 = man, 2 = non-binary, 3 = prefer not to say
+      var gender = 3;
       if (document.getElementById("gender_woman").value == true) {
-        gender = 0
+        gender = 0;
       } else if (document.getElementById("gender_man").value == true) {
-        gender = 1
+        gender = 1;
       } else if (document.getElementById("gender_nonbinary").value = true) {
-        gender = 2
+        gender = 2;
       }
-      inputArray.push(gender)
+      inputArray.push(gender);
 
+      // Get if they have ever drank alcohol (index = 2) or used marijuana (index = 3)
+      if (document.getElementById("truefalse_alcohol").value === "yes_alc") {
+        inputArray.push(1);
+      } else {
+        inputArray.push(0);
+      }
+
+      if (document.getElementById("truefalse_marijuana").value === "yes_mar") {
+        inputArray.push(1);
+      } else {
+        inputArray.push(0);
+      }
+
+      // Get remaining alcohol questions, assuming they've drank alcohol before
+      if (document.getElementById("truefalse_alcohol").value === "yes_alc") {
+        // Get the remaining questions
+        // First age (index = 4), frequency (index = 5), binge-drinking (index = 6)
+        inputArray.push(document.getElementById("first_alcohol_age").value);
+        inputArray.push(document.getElementById("alcohol_use_frequency").value);
+        inputArray.push(document.getElementById("binge_frequency").value);
+      } else {
+        // Push -1s because these questions are invalid
+        for (let i = 0; i < 3; i++) {
+          inputArray.push(-1);
+        }
+      }
+
+      // Get remaining marijuana questions, assuming they've used marijuana before
+      if (document.getElementById("truefalse_marijuana").value === "yes_mar") {
+        // Get the remaining questions
+        // First age (index = 7), frequency (index = 8)
+        inputArray.push(document.getElementById("first_marijuana_age").value);
+        inputArray.push(document.getElementById("marijuana_use_frequency").value);
+      } else {
+        // Push -1s because these questions are invalid
+        inputArray.push(-1);
+        inputArray.push(-1);
+      }
+
+      // Get the last question about reasons for starting use, assuming the question applies
+      if (document.getElementById("truefalse_alcohol").value === "yes_alc" || 
+          document.getElementById("truefalse_marijuana").value === "yes_mar") {
+        inputArray.push(document.getElementById("rank_feature1").value);
+        inputArray.push(document.getElementById("rank_feature2").value);
+        inputArray.push(document.getElementById("rank_feature3").value);
+        inputArray.push(document.getElementById("rank_feature4").value);
+        inputArray.push(document.getElementById("rank_feature5").value);
+        inputArray.push(document.getElementById("rank_feature6").value);
+        inputArray.push(document.getElementById("rank_feature7").value);
+        inputArray.push(document.getElementById("rank_feature8").value);
+        inputArray.push(document.getElementById("rank_feature9").value);
+        inputArray.push(document.getElementById("rank_feature10").value);
+      } else {
+        // This question doesn't apply, so push -1s
+        for (let i = 0; i < 10; i++) {
+          inputArray.push(-1);
+        }
+      }
+
+      alert(inputArray);
+      // TODO: send this vector to the JIFF server
     };
   </script>
   
