--- a/public/index.html
+++ b/public/index.html
@@ -286,7 +286,7 @@
         } else {
           remainingQuestionsAlcohol.style.display = 'none';
           // If alcohol is changed to 'no', check if marijuana is 'no' as well, then hide
-          if (firstTimeInputMarijuana.target.value === 'no_mar') {
+          if (document.getElementById("no_mar").checked) {
             // TODO: this isn't working
             remainingQuestionsEither.style.display = 'none';
           }
@@ -302,7 +302,7 @@
         } else {
           remainingQuestionsMarijuana.style.display = 'none';
           // If marijuana is changed to 'no', check if alcohol is 'no' as well, then hide
-          if (firstTimeInputAlcohol.target.value === 'no_alc') {
+          if (document.getElementById("no_alc").checked) {
             // TODO: this isn't working
             remainingQuestionsEither.style.display = 'none';
           }
@@ -341,30 +341,30 @@
 
       // Get gender (index = 1): 0 = woman, 1 = man, 2 = non-binary, 3 = prefer not to say
       var gender = 3;
-      if (document.getElementById("gender_woman").value == true) {
+      if (document.getElementById("gender_woman").checked) {
         gender = 0;
-      } else if (document.getElementById("gender_man").value == true) {
+      } else if (document.getElementById("gender_man").checked) {
         gender = 1;
-      } else if (document.getElementById("gender_nonbinary").value = true) {
+      } else if (document.getElementById("gender_nonbinary").checked) {
         gender = 2;
       }
       inputArray.push(gender);
 
       // Get if they have ever drank alcohol (index = 2) or used marijuana (index = 3)
-      if (document.getElementById("truefalse_alcohol").value === "yes_alc") {
+      if (document.getElementById("yes_alc").checked) {
         inputArray.push(1);
       } else {
         inputArray.push(0);
       }
 
-      if (document.getElementById("truefalse_marijuana").value === "yes_mar") {
+      if (document.getElementById("yes_mar").checked) {
         inputArray.push(1);
       } else {
         inputArray.push(0);
       }
 
       // Get remaining alcohol questions, assuming they've drank alcohol before
-      if (document.getElementById("truefalse_alcohol").value === "yes_alc") {
+      if (document.getElementById("yes_alc").checked) {
         // Get the remaining questions
         // First age (index = 4), frequency (index = 5), binge-drinking (index = 6)
         inputArray.push(document.getElementById("first_alcohol_age").value);
@@ -378,7 +378,7 @@
       }
 
       // Get remaining marijuana questions, assuming they've used marijuana before
-      if (document.getElementById("truefalse_marijuana").value === "yes_mar") {
+      if (document.getElementById("yes_mar").checked) {
         // Get the remaining questions
         // First age (index = 7), frequency (index = 8)
         inputArray.push(document.getElementById("first_marijuana_age").value);
@@ -390,8 +390,8 @@
       }
 
       // Get the last question about reasons for starting use, assuming the question applies
-      if (document.getElementById("truefalse_alcohol").value === "yes_alc" || 
-          document.getElementById("truefalse_marijuana").value === "yes_mar") {
+      if (document.getElementById("yes_alc").checked || 
+          document.getElementById("yes_mar").checked) {
         inputArray.push(document.getElementById("rank_feature1").value);
         inputArray.push(document.getElementById("rank_feature2").value);
         inputArray.push(document.getElementById("rank_feature3").value);
