--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
   </div>
   <div id="submit_button_div" style="display: none;">
   
-       <button id="submit"type="submit">Submit Questionnaire</button>
+       <button id="submit"type="submit" onclick = "clientArrayLogic()">Submit Questionnaire</button>
 
   <hr>    
    </div>
@@ -402,7 +402,30 @@
       }
 
       alert(inputArray);
-      // TODO: send this vector to the JIFF server
+      // TODO: send this vector to the JIFF server || API CALL
+      function clientArrayLogic(inputData) {
+        //var inputData = document.getElementById('numberInput').value;
+        if (!inputData) {
+          alert("please enter a number");
+          return; // Exit function if input is empty
+        }
+
+        const xhr = new XMLHttpRequest();
+        xhr.open("POST", "/share-input-array");
+        xhr.setRequestHeader("Content-Type", "application/json; charset=UTF-8");
+        const body = JSON.stringify({
+          input: inputData,
+        });
+        xhr.onreadystatechange = function () {
+          if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
+            alert('Input shared successfully');
+          }
+        };
+        xhr.send(body);
+        alert('Input shared unsuccessfully?');
+      }
+
+      clientArrayLogic(inputArray);
     };
   </script>
   
