Added frontend MPC description

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,11 @@
   <h1 id="title">Anonymous Adolescent Drug Use Questionnaire</h1>
   <hr>
   
-  <h3>**Insert introduction to the tool and why MPC enables the questionaire to be submitted completely anonymously while also viewing the analytics collected.** **Also motivation for the tool? (Why would the users want to see the analytics)**</h3>
+  <h3>This survey will be used to gather group statistics about everyone taking the survey at the same time. 
+    It is conducted using multi-party computation. That means that your data will be divided into pieces, encrypted, and 
+    shared in such a way that it can be used to calculate statistics, but your true data cannot be decrypted by anyone. 
+    Your data does not need to be decrypted to calculate the statistics.
+  </h3>
   
   <button id="start"type="start">Start Questionaire</button>
   
