--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,13 @@
       xhr.open('POST', '/start-analyst', true);
       xhr.setRequestHeader('Content-Type', 'application/json');
       xhr.onreadystatechange = function () {
-        if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-          alert('Analyst started successfully');
+        if (xhr.readyState === XMLHttpRequest.DONE) {
+          if(xhr.status === 200){
+            alert('Analyst started successfully');
+          }
+          else if(xhr.status === 409){
+            alert('Analyst already exists!');
+          }
         }
       };
       xhr.send(JSON.stringify({ data: "" }));
